Mochkla f to do list tasks
