# backend/Models/Item.js
@@ -1,21 +1,0 @@
-const mongoose = require('mongoose');
-
-const itemSchema = new mongoose.Schema({
-    title: {
-        type: String,
-        required: true,
-    },
-    priority: {
-        type: String,
-        required: true,
-    },
-    status: {
-        type: String,
-        required: true,
-    },
-
-});
-
-const Item = mongoose.model('Item', itemSchema);
-
-module.exports = Item, itemSchema;
