# backend/swagger_output.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/item": {
+    "/task": {
       "get": {
         "description": "",
         "parameters": [],
@@ -56,7 +56,7 @@
         }
       }
     },
-    "/item/{id}": {
+    "/task/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -120,7 +120,7 @@
         }
       }
     },
-    "/tasks": {
+    "/todolist": {
       "get": {
         "description": "",
         "parameters": [],
@@ -148,7 +148,10 @@
                 "createdAt": {
                   "example": "any"
                 },
-                "items": {
+                "tasks": {
+                  "example": "any"
+                },
+                "dueDate": {
                   "example": "any"
                 }
               }
@@ -165,7 +168,43 @@
         }
       }
     },
-    "/tasks/{id}": {
+    "/todolist/{toDoListId}/task": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "toDoListId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "priority": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/todolist/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -184,7 +223,7 @@
                 "title": {
                   "example": "any"
                 },
-                "items": {
+                "tasks": {
                   "example": "any"
                 }
               }
@@ -219,6 +258,69 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/create-user": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/{userId}/todoList": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "dueDate": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
